# rust-hour

./: .gitignore  Cargo.toml  README.md
puzzles/: INSTASOLVE.txt
src/: board.rs  lib.rs  main.rs  main.rs.old  solver.rs
