[package]
name = "rust-hour"
version = "0.1.0"
authors = ["Devon Burnham <novedevo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"

# [profile.release]
# debug = true

# [profile.dev]
# opt-level = 3
# debug = false