[package]
name = "rust-hour"
version = "0.1.0"
authors = ["Devon Burnham <dburnham@sfu.ca>", "Alexander Mot <amot@sfu.ca>"]
edition = "2018"


[dependencies]
rustc-hash = "*"

[profile.release]
opt-level = 3
lto = "fat"
debug = true

# codegen-units = 1

# [profile.dev]
# opt-level = 3
# debug = false
